--- a/pom.xml
+++ b/pom.xml
@@ -158,8 +158,10 @@
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
+			<artifactId>jackson-databing</artifactId>
 			<version>2.3.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/fastjson-1.2.2.jar</systemPath>
 		</dependency>
 		
 		<!-- bean validate -->
@@ -216,12 +218,12 @@
 			<version>${mysql.driver.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc14</artifactId>
-			<version>${oracle.driver.version}</version>
-			<scope>runtime</scope>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.oracle</groupId>-->
+			<!--<artifactId>ojdbc14</artifactId>-->
+			<!--<version>${oracle.driver.version}</version>-->
+			<!--<scope>runtime</scope>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>net.sourceforge.jtds</groupId>
 			<artifactId>jtds</artifactId>
@@ -562,6 +564,9 @@
 			<groupId>org.wltea</groupId>
 			<artifactId>analyzer</artifactId>
 			<version>2012_u6</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/analyzer-2012_u6.jar</systemPath>
+
 		</dependency>
 		<!-- GENERAL UTILS end -->
 		
@@ -575,21 +580,29 @@
 			<groupId>com.ckfinder</groupId>
 			<artifactId>apache-ant-zip</artifactId>
 			<version>2.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/apache-ant-zip-2.3.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.ckfinder</groupId>
 			<artifactId>ckfinder</artifactId>
 			<version>2.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/ckfinder-2.3.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.ckfinder</groupId>
 			<artifactId>ckfinderplugin-fileeditor</artifactId>
 			<version>2.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/ckfinderplugin-fileeditor-2.3.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.ckfinder</groupId>
 			<artifactId>ckfinderplugin-imageresize</artifactId>
 			<version>2.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/ckfinderplugin-imageresize-2.3.jar</systemPath>
 		</dependency>
 		<!-- CKFinder end -->
 		
@@ -611,6 +624,8 @@
 			<groupId>bitwalker</groupId>
 			<artifactId>UserAgentUtils</artifactId>
 			<version>1.13</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/UserAgentUtils-1.13.jar</systemPath>
 		</dependency>
 
 		<dependency>
