--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -14,10 +14,10 @@ jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://114.115.209.238:3306/sams?useUnicode=true&characterEncoding=utf-8
 #jdbc.url=jdbc:mysql://10.2.0.189:3306/sams?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://localhost:3306/sams?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://114.115.209.238:3306/sams?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 #jdbc.password=root
-jdbc.password=123456
+jdbc.password=newpass
 
 #mssql database settings
 #jdbc.type=mssql
